tests/integration/snapshots/integration__schema_snapshots__response_schema_ScopeCount.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ScopeCount",
  "description": "A current scope key and its associated memory count.",
  "type": "object",
  "properties": {
    "scope": {
      "description": "Current scope key.",
      "type": "string"
    },
    "count": {
      "description": "Number of memories with this scope.",
      "type": "integer",
      "format": "uint64",
      "minimum": 0
    }
  },
  "required": [
    "scope",
    "count"
  ]
}
