tests/integration/snapshots/integration__schema_snapshots__response_schema_ScopeResolution.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ScopeResolution",
  "description": "Diagnostic details for agent-facing scope resolution.",
  "type": "object",
  "properties": {
    "scope": {
      "description": "Resolved scope key, or `inbox/unresolved`.",
      "type": "string"
    },
    "unresolved_scope": {
      "description": "Whether the scope still needs classification.",
      "type": "boolean"
    },
    "resolved_by": {
      "description": "Resolution mechanism.",
      "$ref": "#/$defs/ScopeResolvedBy"
    },
    "matched_hint": {
      "description": "Input hint or explicit value that matched, when applicable.",
      "type": [
        "string",
        "null"
      ]
    },
    "matched_value": {
      "description": "Registry alias or matcher value that matched, when applicable.",
      "type": [
        "string",
        "null"
      ]
    }
  },
  "required": [
    "scope",
    "unresolved_scope",
    "resolved_by"
  ],
  "$defs": {
    "ScopeResolvedBy": {
      "description": "Compatibility mechanism used to derive a legacy scope.",
      "oneOf": [
        {
          "description": "Explicit scope key or raw explicit scope value.",
          "type": "string",
          "const": "explicit"
        },
        {
          "description": "A context alias matched.",
          "type": "string",
          "const": "alias"
        },
        {
          "description": "A context resolver hint matched an explicit scope or legacy context hint.",
          "type": "string",
          "const": "matcher"
        },
        {
          "description": "No scope could be resolved.",
          "type": "string",
          "const": "unresolved"
        }
      ]
    }
  }
}
