tests/integration/snapshots/integration__schema_snapshots__response_schema_ToolErrorResponse.snap
---
source: tests/integration/schema_snapshots.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "ToolErrorResponse",
  "description": "Response envelope returned as JSON text when a tool sets `is_error=true`.",
  "type": "object",
  "properties": {
    "error": {
      "description": "Structured application-level error.",
      "$ref": "#/$defs/ToolError"
    }
  },
  "required": [
    "error"
  ],
  "$defs": {
    "ToolError": {
      "description": "Structured application-level tool error.",
      "type": "object",
      "properties": {
        "code": {
          "description": "Stable machine-readable error code.",
          "$ref": "#/$defs/ToolErrorCode"
        },
        "field": {
          "description": "Optional request field path associated with the error.",
          "type": [
            "string",
            "null"
          ]
        },
        "message": {
          "description": "Human-readable summary.",
          "type": "string"
        },
        "suggested_fix": {
          "description": "Optional suggested agent action.",
          "type": [
            "string",
            "null"
          ]
        },
        "retryable": {
          "description": "Whether retrying the same request may succeed later.",
          "type": "boolean"
        },
        "details": {
          "description": "Secret-free structured diagnostics such as context candidates, policy\nguidance, and complete retry arguments."
        },
        "recommended_actions": {
          "description": "Reusable next actions.",
          "type": "array",
          "items": {
            "$ref": "#/$defs/RecommendedAction"
          }
        }
      },
      "required": [
        "code",
        "message",
        "retryable"
      ]
    },
    "ToolErrorCode": {
      "description": "Stable code for structured application-level tool errors.",
      "oneOf": [
        {
          "description": "Input was syntactically valid JSON but failed tool validation.",
          "type": "string",
          "const": "invalid_params"
        },
        {
          "description": "Requested memory or resource was not found or was not visible to this principal.",
          "type": "string",
          "const": "not_found"
        },
        {
          "description": "Principal lacks the requested access.",
          "type": "string",
          "const": "access_denied"
        },
        {
          "description": "Anonymous reads are disabled by server policy.",
          "type": "string",
          "const": "anonymous_read_denied"
        },
        {
          "description": "Anonymous writes are disabled by server policy.",
          "type": "string",
          "const": "anonymous_write_denied"
        },
        {
          "description": "Required backend capability is unavailable.",
          "type": "string",
          "const": "unavailable"
        },
        {
          "description": "Request conflicts with current state.",
          "type": "string",
          "const": "conflict"
        },
        {
          "description": "A governed write needs an explicit context or explicit unresolved\ndeferral.",
          "type": "string",
          "const": "context_required"
        },
        {
          "description": "A context locator or fuzzy query matched multiple authorized contexts.",
          "type": "string",
          "const": "context_ambiguous"
        },
        {
          "description": "Unexpected internal failure.",
          "type": "string",
          "const": "internal"
        }
      ]
    },
    "RecommendedAction": {
      "description": "Deterministic next action recommended by `brief`.",
      "type": "object",
      "properties": {
        "tool": {
          "description": "Tool to call next.",
          "$ref": "#/$defs/RecommendedActionTool"
        },
        "priority": {
          "description": "Action priority.",
          "$ref": "#/$defs/RecommendedActionPriority"
        },
        "reason": {
          "description": "Why this action is recommended.",
          "type": "string"
        },
        "arguments": {
          "description": "Complete tool arguments when the server can construct a valid call."
        }
      },
      "required": [
        "tool",
        "priority",
        "reason"
      ]
    },
    "RecommendedActionTool": {
      "description": "Tool name for a deterministic next action recommended by `brief`.",
      "oneOf": [
        {
          "description": "Read one full memory by ID.",
          "type": "string",
          "const": "read"
        },
        {
          "description": "Read multiple full memories by ID.",
          "type": "string",
          "const": "read_many"
        },
        {
          "description": "Run a focused recall search.",
          "type": "string",
          "const": "recall"
        },
        {
          "description": "Store a new durable memory.",
          "type": "string",
          "const": "remember"
        },
        {
          "description": "Resolve or browse governed contexts.",
          "type": "string",
          "const": "context_resolve"
        },
        {
          "description": "Create a governed context.",
          "type": "string",
          "const": "context_create"
        },
        {
          "description": "Register a missing scope definition.",
          "type": "string",
          "const": "admin_scope_register"
        }
      ]
    },
    "RecommendedActionPriority": {
      "description": "Priority for a deterministic next action recommended by `brief`.",
      "oneOf": [
        {
          "description": "Do this first.",
          "type": "string",
          "const": "high"
        },
        {
          "description": "Useful but not urgent.",
          "type": "string",
          "const": "normal"
        },
        {
          "description": "Optional follow-up for weak or stale context.",
          "type": "string",
          "const": "low"
        }
      ]
    }
  }
}
